src/main/java/com/myerlang/erlapi/gen/BccLanguageParser.java
// Generated from C:/Users/gabri/Desktop/final_lenguajes/erlapi/src/main/java/com/myerlang/erlapi/grammar\BccLanguage.g4 by ANTLR 4.8
package com.myerlang.erlapi.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BccLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, MULOP=8, SUMOP=9, 
		COMPARISONOP=10, ASSIGNOP=11, DATATYPE=12, FUNCTION=13, VAR=14, PRINT=15, 
		INPUT=16, WHEN=17, IF=18, UNLESS=19, WHILE=20, REPEAT=21, RETURN=22, UNTIL=23, 
		LOOP=24, DO=25, ELSE=26, AND=27, OR=28, FOR=29, NEXT=30, BREAK=31, NOT=32, 
		BOOL=33, SUBS=34, ADD=35, END=36, NUM=37, FID=38, ID=39, ESP=40, LINE_COMMENT=41;
	public static final int
		RULE_prog = 0, RULE_var_decl = 1, RULE_fn_decl_list = 2, RULE_stmt_block = 3, 
		RULE_stmt = 4, RULE_lexpr = 5, RULE_nexpr = 6, RULE_rexpr = 7, RULE_simple_expr = 8, 
		RULE_term = 9, RULE_factor = 10, RULE_main_prog = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "var_decl", "fn_decl_list", "stmt_block", "stmt", "lexpr", "nexpr", 
			"rexpr", "simple_expr", "term", "factor", "main_prog"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'('", "')'", "';'", "'{'", "'}'", null, null, null, 
			null, null, "'function'", "'var'", "'print'", "'input'", "'when'", "'if'", 
			"'unless'", "'while'", "'repeat'", "'return'", "'until'", "'loop'", "'do'", 
			"'else'", "'and'", "'or'", "'for'", "'next'", "'break'", "'not'", null, 
			"'--'", "'++'", "'end'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "MULOP", "SUMOP", "COMPARISONOP", 
			"ASSIGNOP", "DATATYPE", "FUNCTION", "VAR", "PRINT", "INPUT", "WHEN", 
			"IF", "UNLESS", "WHILE", "REPEAT", "RETURN", "UNTIL", "LOOP", "DO", "ELSE", 
			"AND", "OR", "FOR", "NEXT", "BREAK", "NOT", "BOOL", "SUBS", "ADD", "END", 
			"NUM", "FID", "ID", "ESP", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BccLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BccLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Main_progContext main_prog() {
			return getRuleContext(Main_progContext.class,0);
		}
		public List<Fn_decl_listContext> fn_decl_list() {
			return getRuleContexts(Fn_decl_listContext.class);
		}
		public Fn_decl_listContext fn_decl_list(int i) {
			return getRuleContext(Fn_decl_listContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(24);
				fn_decl_list();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			main_prog();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(BccLanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(BccLanguageParser.ID, i);
		}
		public List<TerminalNode> DATATYPE() { return getTokens(BccLanguageParser.DATATYPE); }
		public TerminalNode DATATYPE(int i) {
			return getToken(BccLanguageParser.DATATYPE, i);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(ID);
			setState(33);
			match(T__0);
			setState(34);
			match(DATATYPE);
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(35);
				match(T__1);
				setState(36);
				match(ID);
				setState(37);
				match(T__0);
				setState(38);
				match(DATATYPE);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fn_decl_listContext extends ParserRuleContext {
		public Var_declContext PARAMS;
		public Var_declContext LOCAL_VAR;
		public TerminalNode FUNCTION() { return getToken(BccLanguageParser.FUNCTION, 0); }
		public TerminalNode FID() { return getToken(BccLanguageParser.FID, 0); }
		public TerminalNode DATATYPE() { return getToken(BccLanguageParser.DATATYPE, 0); }
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public TerminalNode VAR() { return getToken(BccLanguageParser.VAR, 0); }
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public Fn_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_decl_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterFn_decl_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitFn_decl_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitFn_decl_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fn_decl_listContext fn_decl_list() throws RecognitionException {
		Fn_decl_listContext _localctx = new Fn_decl_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fn_decl_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(FUNCTION);
			setState(45);
			match(FID);
			setState(46);
			match(T__0);
			setState(47);
			match(DATATYPE);
			setState(48);
			match(T__2);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(49);
				((Fn_decl_listContext)_localctx).PARAMS = var_decl();
				}
			}

			setState(52);
			match(T__3);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(53);
				match(VAR);
				setState(54);
				((Fn_decl_listContext)_localctx).LOCAL_VAR = var_decl();
				setState(55);
				match(T__4);
				}
			}

			setState(59);
			stmt_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stmt_blockContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Stmt_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterStmt_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitStmt_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitStmt_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_blockContext stmt_block() throws RecognitionException {
		Stmt_blockContext _localctx = new Stmt_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt_block);
		int _la;
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(T__5);
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(62);
					stmt();
					}
					}
					setState(65); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INPUT) | (1L << WHEN) | (1L << IF) | (1L << UNLESS) | (1L << WHILE) | (1L << REPEAT) | (1L << RETURN) | (1L << UNTIL) | (1L << LOOP) | (1L << DO) | (1L << FOR) | (1L << NEXT) | (1L << BREAK) | (1L << SUBS) | (1L << ADD) | (1L << ID))) != 0) );
				setState(67);
				match(T__6);
				}
				break;
			case PRINT:
			case INPUT:
			case WHEN:
			case IF:
			case UNLESS:
			case WHILE:
			case REPEAT:
			case RETURN:
			case UNTIL:
			case LOOP:
			case DO:
			case FOR:
			case NEXT:
			case BREAK:
			case SUBS:
			case ADD:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Token ALONEWHILE;
		public Token ALONEUNTIL;
		public Token DOWHILE;
		public Token DOUNTIL;
		public Token RIGHT_INC;
		public Token RIGHT_DEC;
		public Token LEFT_INC;
		public Token LEFT_DEC;
		public TerminalNode PRINT() { return getToken(BccLanguageParser.PRINT, 0); }
		public List<LexprContext> lexpr() {
			return getRuleContexts(LexprContext.class);
		}
		public LexprContext lexpr(int i) {
			return getRuleContext(LexprContext.class,i);
		}
		public TerminalNode INPUT() { return getToken(BccLanguageParser.INPUT, 0); }
		public TerminalNode ID() { return getToken(BccLanguageParser.ID, 0); }
		public TerminalNode WHEN() { return getToken(BccLanguageParser.WHEN, 0); }
		public TerminalNode DO() { return getToken(BccLanguageParser.DO, 0); }
		public List<Stmt_blockContext> stmt_block() {
			return getRuleContexts(Stmt_blockContext.class);
		}
		public Stmt_blockContext stmt_block(int i) {
			return getRuleContext(Stmt_blockContext.class,i);
		}
		public TerminalNode IF() { return getToken(BccLanguageParser.IF, 0); }
		public TerminalNode ELSE() { return getToken(BccLanguageParser.ELSE, 0); }
		public TerminalNode UNLESS() { return getToken(BccLanguageParser.UNLESS, 0); }
		public TerminalNode WHILE() { return getToken(BccLanguageParser.WHILE, 0); }
		public TerminalNode RETURN() { return getToken(BccLanguageParser.RETURN, 0); }
		public TerminalNode UNTIL() { return getToken(BccLanguageParser.UNTIL, 0); }
		public TerminalNode LOOP() { return getToken(BccLanguageParser.LOOP, 0); }
		public TerminalNode REPEAT() { return getToken(BccLanguageParser.REPEAT, 0); }
		public TerminalNode NUM() { return getToken(BccLanguageParser.NUM, 0); }
		public TerminalNode FOR() { return getToken(BccLanguageParser.FOR, 0); }
		public TerminalNode NEXT() { return getToken(BccLanguageParser.NEXT, 0); }
		public TerminalNode BREAK() { return getToken(BccLanguageParser.BREAK, 0); }
		public TerminalNode ASSIGNOP() { return getToken(BccLanguageParser.ASSIGNOP, 0); }
		public TerminalNode ADD() { return getToken(BccLanguageParser.ADD, 0); }
		public TerminalNode SUBS() { return getToken(BccLanguageParser.SUBS, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(PRINT);
				setState(73);
				lexpr();
				setState(74);
				match(T__4);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(INPUT);
				setState(77);
				match(ID);
				setState(78);
				match(T__4);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(WHEN);
				setState(80);
				match(T__2);
				setState(81);
				lexpr();
				setState(82);
				match(T__3);
				setState(83);
				match(DO);
				setState(84);
				stmt_block();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				match(IF);
				setState(87);
				match(T__2);
				setState(88);
				lexpr();
				setState(89);
				match(T__3);
				setState(90);
				match(DO);
				setState(91);
				stmt_block();
				setState(92);
				match(ELSE);
				setState(93);
				stmt_block();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				match(UNLESS);
				setState(96);
				match(T__2);
				setState(97);
				lexpr();
				setState(98);
				match(T__3);
				setState(99);
				match(DO);
				setState(100);
				stmt_block();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				((StmtContext)_localctx).ALONEWHILE = match(WHILE);
				setState(103);
				match(T__2);
				setState(104);
				lexpr();
				setState(105);
				match(T__3);
				setState(106);
				match(DO);
				setState(107);
				stmt_block();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(109);
				match(RETURN);
				setState(110);
				lexpr();
				setState(111);
				match(T__4);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(113);
				((StmtContext)_localctx).ALONEUNTIL = match(UNTIL);
				setState(114);
				match(T__2);
				setState(115);
				lexpr();
				setState(116);
				match(T__3);
				setState(117);
				match(DO);
				setState(118);
				stmt_block();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(120);
				match(LOOP);
				setState(121);
				stmt_block();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(122);
				match(DO);
				setState(123);
				stmt_block();
				setState(124);
				((StmtContext)_localctx).DOWHILE = match(WHILE);
				setState(125);
				match(T__2);
				setState(126);
				lexpr();
				setState(127);
				match(T__3);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(129);
				match(DO);
				setState(130);
				stmt_block();
				setState(131);
				((StmtContext)_localctx).DOUNTIL = match(UNTIL);
				setState(132);
				match(T__2);
				setState(133);
				lexpr();
				setState(134);
				match(T__3);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(136);
				match(REPEAT);
				setState(137);
				match(NUM);
				setState(138);
				match(T__0);
				setState(139);
				stmt_block();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(140);
				match(FOR);
				setState(141);
				match(T__2);
				setState(142);
				lexpr();
				setState(143);
				match(T__4);
				setState(144);
				lexpr();
				setState(145);
				match(T__4);
				setState(146);
				lexpr();
				setState(147);
				match(T__3);
				setState(148);
				match(DO);
				setState(149);
				stmt_block();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(151);
				match(NEXT);
				setState(152);
				match(T__4);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(153);
				match(BREAK);
				setState(154);
				match(T__4);
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(155);
				match(ID);
				setState(156);
				match(ASSIGNOP);
				setState(157);
				lexpr();
				setState(158);
				match(T__4);
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(160);
				match(ID);
				setState(163);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ADD:
					{
					setState(161);
					((StmtContext)_localctx).RIGHT_INC = match(ADD);
					}
					break;
				case SUBS:
					{
					setState(162);
					((StmtContext)_localctx).RIGHT_DEC = match(SUBS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(165);
				match(T__4);
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(168);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ADD:
					{
					setState(166);
					((StmtContext)_localctx).LEFT_INC = match(ADD);
					}
					break;
				case SUBS:
					{
					setState(167);
					((StmtContext)_localctx).LEFT_DEC = match(SUBS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(170);
				match(ID);
				setState(171);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexprContext extends ParserRuleContext {
		public List<NexprContext> nexpr() {
			return getRuleContexts(NexprContext.class);
		}
		public NexprContext nexpr(int i) {
			return getRuleContext(NexprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(BccLanguageParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(BccLanguageParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(BccLanguageParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(BccLanguageParser.OR, i);
		}
		public LexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterLexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitLexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitLexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexprContext lexpr() throws RecognitionException {
		LexprContext _localctx = new LexprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			nexpr();
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND) {
					{
					{
					setState(175);
					match(AND);
					setState(176);
					nexpr();
					}
					}
					setState(181);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OR) {
					{
					{
					setState(182);
					match(OR);
					setState(183);
					nexpr();
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NexprContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(BccLanguageParser.NOT, 0); }
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public RexprContext rexpr() {
			return getRuleContext(RexprContext.class,0);
		}
		public NexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterNexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitNexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitNexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NexprContext nexpr() throws RecognitionException {
		NexprContext _localctx = new NexprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nexpr);
		try {
			setState(197);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				match(NOT);
				setState(192);
				match(T__2);
				setState(193);
				lexpr();
				setState(194);
				match(T__3);
				}
				break;
			case T__2:
			case BOOL:
			case SUBS:
			case ADD:
			case NUM:
			case FID:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				rexpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RexprContext extends ParserRuleContext {
		public List<Simple_exprContext> simple_expr() {
			return getRuleContexts(Simple_exprContext.class);
		}
		public Simple_exprContext simple_expr(int i) {
			return getRuleContext(Simple_exprContext.class,i);
		}
		public TerminalNode COMPARISONOP() { return getToken(BccLanguageParser.COMPARISONOP, 0); }
		public RexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterRexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitRexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BccLanguageVisitor ) return ((BccLanguageVisitor<? extends T>)visitor).visitRexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RexprContext rexpr() throws RecognitionException {
		RexprContext _localctx = new RexprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			simple_expr();
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMPARISONOP) {
				{
				setState(200);
				match(COMPARISONOP);
				setState(201);
				simple_expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_exprContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> SUMOP() { return getTokens(BccLanguageParser.SUMOP); }
		public TerminalNode SUMOP(int i) {
			return getToken(BccLanguageParser.SUMOP, i);
		}
		public Simple_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).enterSimple_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BccLanguageListener ) ((BccLanguageListener)listener).exitSimple_expr(this);
		}
		@Override
